--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,11 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: theme('colors.background');
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: content-box;
+}
