--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,4 +22,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: content-box;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
